# faker-gui

./: .gitignore  PRD.md  README.md  pyproject.toml
exports/: fake_data.csv  fake_data.json
src/: __init__.py  app.py
src/components/: __init__.py  data_export.py  data_generator.py  data_preview.py
src/utils/: __init__.py  faker_utils.py  logger.py
