[project]
name = "faker-gui"
version = "0.1.0"
description = "A GUI tool for generating fake data using Faker and Flet"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "flet>=0.25.0",
    "faker>=20.0.0",
    "pandas>=2.0.0",
    "flet-desktop>=0.25.2",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
]
